Used new factory method for empty list